--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,47 @@
     <title>test</title>
 </head>
 <body>
-    <div class="sidebar"></div>
-    <main class="content"></main>
+    <header></header>
+    <main></main>
+    <footer>Developed by Jruxtapose</footer>
+    <div id="modify-task-details-template"></div>
+    <div id="new-task-modal-template">
+        <span id="new-task-heading">New Task</span>
+        <button id="close-new-project-modal">x</button>
+        <form action="#" method="get" class="new-task-form">
+            <ul>
+                <div class="new-task-title-container">
+                    <label for="new-task-title">Title:</label>
+                    <input type="text" name="new-task-title" id="new-task-title" required>
+                </div>
+                <div class="new-task-description-container">
+                    <label for="new-task-description">Description:</label>
+                    <textarea name="new-task-description" id="new-task-description"></textarea>
+                </div>
+                <div class="new-task-duedate-container">
+                    <label for="new-task-duedate">Due Date:</label>
+                    <input type="date" name="new-task-duedate" id="new-task-duedate">
+                </div>
+                <div class="new-task-project-container">
+                    <label for="new-task-project">Project:</label>
+                    <select name="new-task-project" id="new-task-project">
+                        <option value="0">No Project</option>
+                    </select>
+                </div>
+                <div class="new-task-priority-container">
+                    <label for="new-task-priority">Priority:</label>
+                    <input type="radio" name="new-task-priority" id="new-task-low-priority" class="task-low-priority" required>
+                    <input type="radio" name="new-task-priority" id="new-task-medium-priority" class="task-medium-priority">
+                    <input type="radio" name="new-task-priority" id="new-task-high-priority" class="task-high-priority">
+                </div>
+                <div class="form-buttons">
+                    <button type="submit">Save</button>
+                    <button id="cancel-new-task-creation">Cancel</button>
+                </div>
+
+
+            </ul>
+        </form>
+    </div>
 </body>
 </html>
