--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         </ul>
     </div>
     <main id="content">
+        <header></header>
         <table id="task-list-table">
 
         </table>
