--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,44 @@
         </table>
     </main>
     <footer><p>Developed by Jruxtapose</p></footer>
-    <div id="modify-task-modal-template"></div>
+    
+    <div id="modify-task-modal-template">
+        <header id="modify-task-header">
+            <span id="modify-task-heading">Modify Task</span>
+            <button id="close-modal">x</button>
+        </header>
+        <form action="#" method="get" id="modify-task-form">
+                <div class="modify-task-title-container">
+                    <label for="modify-task-title">Title:</label>
+                    <input type="text" name="modify-task-title" id="modify-task-title" required>
+                </div>
+                <div class="modify-task-description-container">
+                    <label for="modify-task-description">Description:</label>
+                    <textarea name="modify-task-description" id="modify-task-description"></textarea>
+                </div>
+                <div class="modify-task-duedate-container">
+                    <label for="modify-task-duedate">Due Date:</label>
+                    <input type="date" name="modify-task-duedate" id="modify-task-duedate">
+                </div>
+                <div class="modify-task-project-container">
+                    <label for="modify-task-project">Project:</label>
+                    <select name="modify-task-project" id="modify-task-project">
+                        <option value="0">No Project</option>
+                    </select>
+                </div>
+                <div class="modify-task-priority-container">
+                    <label for="modify-task-priority">Priority:</label>
+                    <input type="radio" name="modify-task-priority" id="modify-task-low-priority" class="task-low-priority" required>
+                    <input type="radio" name="modify-task-priority" id="modify-task-medium-priority" class="task-medium-priority">
+                    <input type="radio" name="modify-task-priority" id="modify-task-high-priority" class="task-high-priority">
+                </div>
+                <div class="form-buttons">
+                    <button type="submit" id="save-modified-task">Save</button>
+                    <button id="cancel-modal">Cancel</button>
+                </div>
+        </form>
+    </div>
+
     <div id="new-task-modal-template">
         <header id="new-task-header">
             <span id="new-task-heading">New Task</span>
