--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <div id="sidebar">
         <ul id="navigation-buttons">
             <button id="add-task-button">Add Task</button>
+            <button id="add-project-button">Add Project</button>
         </ul>
     </div>
     <main id="content">
@@ -18,79 +19,108 @@
         </table>
     </main>
     <footer><p>Developed by Jruxtapose</p></footer>
+
+    <div id="add-project-modal-template">
+        <div class="modal-overlay">
+            <div class="modal-content">
+                <header class="modal-header">
+                    <span class="modal-heading">Add Project</span>
+                    <button class="close-modal">x</button>
+                </header>
+                <form action="#" method="get" id="add-project-form">
+                    <div class="add-project-title-container">
+                        <label for="add-project-title">Title:</label>
+                        <input type="text" name="add-project-title" id="add-project-title">
+                    </div>
+                    <div class="form-buttons">
+                        <button type="submit" id="save-new-project">Save</button>
+                        <button id="cancel-modal">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     
     <div id="modify-task-modal-template">
-        <header id="modify-task-header">
-            <span id="modify-task-heading">Modify Task</span>
-            <button id="close-modal">x</button>
-        </header>
-        <form action="#" method="get" id="modify-task-form">
-                <div class="modify-task-title-container">
-                    <label for="modify-task-title">Title:</label>
-                    <input type="text" name="modify-task-title" id="modify-task-title" required>
-                </div>
-                <div class="modify-task-description-container">
-                    <label for="modify-task-description">Description:</label>
-                    <textarea name="modify-task-description" id="modify-task-description"></textarea>
-                </div>
-                <div class="modify-task-duedate-container">
-                    <label for="modify-task-duedate">Due Date:</label>
-                    <input type="date" name="modify-task-duedate" id="modify-task-duedate">
-                </div>
-                <div class="modify-task-project-container">
-                    <label for="modify-task-project">Project:</label>
-                    <select name="modify-task-project" id="modify-task-project">
-                        <option value="0">No Project</option>
-                    </select>
-                </div>
-                <div class="modify-task-priority-container">
-                    <label for="modify-task-priority">Priority:</label>
-                    <input type="radio" name="modify-task-priority" id="modify-task-low-priority" class="task-low-priority" required>
-                    <input type="radio" name="modify-task-priority" id="modify-task-medium-priority" class="task-medium-priority">
-                    <input type="radio" name="modify-task-priority" id="modify-task-high-priority" class="task-high-priority">
-                </div>
-                <div class="form-buttons">
-                    <button type="submit" id="save-modified-task">Save</button>
-                    <button id="cancel-modal">Cancel</button>
-                </div>
-        </form>
+        <div class="modal-overlay">
+            <div class="modal-content">
+                <header class="modal-header">
+                    <span class="modal-heading">Modify Task</span>
+                    <button class="close-modal">x</button>
+                </header>
+                <form action="#" method="get" id="modify-task-form">
+                        <div class="modify-task-title-container">
+                            <label for="modify-task-title">Title:</label>
+                            <input type="text" name="modify-task-title" id="modify-task-title" required>
+                        </div>
+                        <div class="modify-task-description-container">
+                            <label for="modify-task-description">Description:</label>
+                            <textarea name="modify-task-description" id="modify-task-description"></textarea>
+                        </div>
+                        <div class="modify-task-duedate-container">
+                            <label for="modify-task-duedate">Due Date:</label>
+                            <input type="date" name="modify-task-duedate" id="modify-task-duedate">
+                        </div>
+                        <div class="modify-task-project-container">
+                            <label for="modify-task-project">Project:</label>
+                            <select name="modify-task-project" id="modify-task-project">
+                                <option value="0">No Project</option>
+                            </select>
+                        </div>
+                        <div class="modify-task-priority-container">
+                            <label for="modify-task-priority">Priority:</label>
+                            <input type="radio" name="modify-task-priority" id="modify-task-low-priority" class="task-low-priority" required>
+                            <input type="radio" name="modify-task-priority" id="modify-task-medium-priority" class="task-medium-priority">
+                            <input type="radio" name="modify-task-priority" id="modify-task-high-priority" class="task-high-priority">
+                        </div>
+                        <div class="form-buttons">
+                            <button type="submit" id="save-modified-task">Save</button>
+                            <button class="cancel-modal">Cancel</button>
+                        </div>
+                </form>
+            </div>
+        </div>
     </div>
 
     <div id="new-task-modal-template">
-        <header id="new-task-header">
-            <span id="new-task-heading">New Task</span>
-            <button id="close-modal">x</button>
-        </header>
-        <form action="#" method="get" id="new-task-form">
-                <div class="new-task-title-container">
-                    <label for="new-task-title">Title:</label>
-                    <input type="text" name="new-task-title" id="new-task-title" required>
-                </div>
-                <div class="new-task-description-container">
-                    <label for="new-task-description">Description:</label>
-                    <textarea name="new-task-description" id="new-task-description"></textarea>
-                </div>
-                <div class="new-task-duedate-container">
-                    <label for="new-task-duedate">Due Date:</label>
-                    <input type="date" name="new-task-duedate" id="new-task-duedate">
-                </div>
-                <div class="new-task-project-container">
-                    <label for="new-task-project">Project:</label>
-                    <select name="new-task-project" id="new-task-project">
-                        <option value="0">No Project</option>
-                    </select>
-                </div>
-                <div class="new-task-priority-container">
-                    <label for="new-task-priority">Priority:</label>
-                    <input type="radio" name="new-task-priority" id="new-task-low-priority" class="task-low-priority" required>
-                    <input type="radio" name="new-task-priority" id="new-task-medium-priority" class="task-medium-priority">
-                    <input type="radio" name="new-task-priority" id="new-task-high-priority" class="task-high-priority">
-                </div>
-                <div class="form-buttons">
-                    <button type="submit" id="save-new-task">Save</button>
-                    <button id="cancel-modal">Cancel</button>
-                </div>
-        </form>
+        <div class="modal-overlay">
+            <div class="modal-content">
+                <header class="modal-header">
+                    <span class="modal-heading">New Task</span>
+                    <button class="close-modal">x</button>
+                </header>
+                <form action="#" method="get" id="new-task-form">
+                        <div class="new-task-title-container">
+                            <label for="new-task-title">Title:</label>
+                            <input type="text" name="new-task-title" id="new-task-title" required>
+                        </div>
+                        <div class="new-task-description-container">
+                            <label for="new-task-description">Description:</label>
+                            <textarea name="new-task-description" id="new-task-description"></textarea>
+                        </div>
+                        <div class="new-task-duedate-container">
+                            <label for="new-task-duedate">Due Date:</label>
+                            <input type="date" name="new-task-duedate" id="new-task-duedate">
+                        </div>
+                        <div class="new-task-project-container">
+                            <label for="new-task-project">Project:</label>
+                            <select name="new-task-project" id="new-task-project">
+                                <option value="0">No Project</option>
+                            </select>
+                        </div>
+                        <div class="new-task-priority-container">
+                            <label for="new-task-priority">Priority:</label>
+                            <input type="radio" name="new-task-priority" id="new-task-low-priority" class="task-low-priority" required>
+                            <input type="radio" name="new-task-priority" id="new-task-medium-priority" class="task-medium-priority">
+                            <input type="radio" name="new-task-priority" id="new-task-high-priority" class="task-high-priority">
+                        </div>
+                        <div class="form-buttons">
+                            <button type="submit" id="save-new-task">Save</button>
+                            <button class="cancel-modal">Cancel</button>
+                        </div>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 </html>
