--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,23 @@
 </head>
 <body>
     <div id="sidebar">
-        <ul id="navigation-buttons">
-            <button id="add-task-button">Add Task</button>
-            <button id="add-project-button">Add Project</button>
-        </ul>
+        <div id="navigation-buttons">
+            <button id="add-task-button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
+                Add Task
+            </button>
+            <button id="add-project-button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>playlist-plus</title><path d="M3 16H10V14H3M18 14V10H16V14H12V16H16V20H18V16H22V14M14 6H3V8H14M14 10H3V12H14V10Z" /></svg>
+                Add Project
+            </button>
+        </div>
     </div>
     <main id="content">
         <header></header>
-        <table id="task-list-table">
-
-        </table>
+        <div class="table-container">
+            <table id="task-list-table">
+            </table>
+        </div>
     </main>
     <footer><p>Developed by Jruxtapose</p></footer>
 
@@ -34,7 +41,7 @@
                     </div>
                     <div class="form-buttons">
                         <button type="submit" id="save-new-project">Save</button>
-                        <button id="cancel-modal">Cancel</button>
+                        <button class="cancel-modal">Cancel</button>
                     </div>
                 </form>
             </div>
