Bug fixes, add filter buttons.

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
     <div id="sidebar">
         <div id="top-buttons">
             <h1>Pages</h1>
+            <div class="page-buttons">
+                <button id="show-all-tasks">All Tasks</button>
+                <button id="show-overdue-tasks">OverDue</button>
+            </div>
 
         </div>
         <div id="middle-buttons">
@@ -19,7 +23,7 @@
                 </button>
             </header>
             <main class="sidebar-projects-list">
-                
+
             </main>
         </div>
         <div id="bottom-buttons">
