Add date formatting and today's date.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="sidebar">
         <div id="top-buttons">
+            <div id="today-date-container">Today is: <div id="today-date"></div></div>
             <h1>Pages</h1>
             <div class="page-buttons">
                 <button id="show-all-tasks">All Tasks</button>
