--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
                         </div>
                         <div class="form-buttons">
                             <button type="submit" id="save-modified-task">Save</button>
+                            <button class="delete-task">Delete</button>
                             <button class="cancel-modal">Cancel</button>
                         </div>
                 </form>
