Move sort buttons for ease of access.

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <main id="content">
-        <header>
+        <header class="sort-buttons">
             <button id="sort-by-date">Sort By Date</button>
             <button id="sort-by-priority">Sort By Priority</button>
             <button id="sort-by-project">Sort By Project</button>
