--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             <div class="projects">
                 <div class="sidebar-header">
                     <h2>Projects</h2>
-                    <button class="add-new-project"><img src="images/svg/plus-circle.svg" alt="add new project"></button>
+                    <button class="add-new-project"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Add Project</title><path d="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg></button>
                 </div>
                 <div class="project-buttons">                    
                     <div class="project-button-container">
@@ -47,6 +47,7 @@
         </div>
         <div class="topbar">
                 <h1 class="page-title">All Tasks</h1>
+                <p class="sort-method">Sorted by</p>
                 <div class="sort-buttons">
                     <button id="sort-by-date" class="sort-button">Sort by Date</button>
                     <button id="sort-by-priority" class="sort-button">Sort by Priority</button>
